--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-        xmlns:th="http://www.thymeleaf.org"
+        xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
 >
 
 <head>
@@ -32,25 +32,31 @@
 
     <nav class="navbar fixed-top navbar-dark bg-primary ">
         <div class="container-fluid">
+<!--            <div class="dropdown">-->
+<!--                <button class="btn btn-primary dropdown-toggle " type="button" id="dropdownMenuButton1"-->
+<!--                        data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--                    - -->
 
+<!--                </button>-->
+<!--                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">-->
+<!--                    <li><a class="dropdown-item" href="#">Действие</a></li>-->
+<!--                    <li><a class="dropdown-item" href="#">Другое действие</a></li>-->
+<!--                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
 
-            <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle " type="button" id="dropdownMenuButton1"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                    -
-
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">Действие</a></li>
-                    <li><a class="dropdown-item" href="#">Другое действие</a></li>
-                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
-                </ul>
+            <div sec:authorize="isAuthenticated()">
+                <a class="link-light" th:href="@{/logout}">Sing out</a>
             </div>
-
-            <button type="button " class="btn btn-light btn-rounded" data-bs-toggle="modal"
+            <div sec:authorize="!isAuthenticated()">
+                <a class="link-light" th:href="@{/login}">Sing in</a>
+            </div>
+            <button sec:authorize="isAuthenticated()" type="button " class="btn btn-light btn-rounded" data-bs-toggle="modal"
                     data-bs-target="#newEventModal">New Event
             </button>
+
         </div>
+
     </nav>
 
 
@@ -86,7 +92,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row g-3" method="post" action="/" id="save">
+                    <form class="row g-3" th:method="POST" th:action="@{/save}" id="save">
                         <div class="col-md-3">
                             <label for="room" class="form-label">Room</label>
                             <select name="room" class="form-control" id="room">
@@ -120,6 +126,9 @@
             </div>
         </div>
     </div>
+</div>
+<div sec:authorize="hasAuthority('USER')">
+vdfdf
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
