--- a/src/main/resources/templates/management.html
+++ b/src/main/resources/templates/management.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
-<html
-        xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
->
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Scheduler</title>
+    <title>Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
-        td {
-            margin: 0px;
-            width: 200px;
-            height: 130px;
-
-        }
-
         body {
 
             min-height: 75rem;
             padding-top: 4.5rem;
         }
-
     </style>
 
 </head>
-
 <body>
 <div class="container">
     <nav class="navbar  fixed-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
@@ -44,31 +32,28 @@
             </div>
             <button sec:authorize="isAuthenticated()" class="btn btn-outline-success" type="button"
                     data-bs-toggle="modal"
-                    data-bs-target="#newEventModal">New Event
+                    data-bs-target="#newEventModal">Add Room
             </button>
         </div>
     </nav>
-
-
     <table class="table table-success table-striped  border border-3 border-dark align-middle text-center">
         <thead>
         <tr>
-            <th scope="col">Date</th>
-            <th scope="col" class="border border-3 border-dark " th:each="room : ${rooms}" th:text="${room.name}"></th>
+            <th scope="col">Room</th>
+            <th scope="col" class="border border-3 border-dark ">Action</th>
         </tr>
         </thead>
+        <tr class="border border-3 border-dark" th:each="room:${rooms}">
+            <td class="border border-3 border-dark col-md-3" th:text="${room.name}"></td>
+            <td class="border border-3 border-dark col-md-3">
+                <div>
+                    <form th:method="GET" th:action="@{/manage/{id}(id=${room.id})}" th:id="edit+${room.id}">
+                    </form>
+                    <form th:method="DELETE" th:action="@{/manage/{id}(id=${room.id})}" th:id="delete+${room.id}">
+                    </form>
 
-        <tr class="border border-3 border-dark " th:each="date : ${dates}">
-            <td class="border border-3 border-dark " th:text="${#temporals.format(date, 'dd.MM.yyyy')}"></td>
-            <td class="border border-3 border-dark " th:each="room : ${rooms}">
-                <div class="border-bottom border-1 border-dark "
-                     th:each="event : ${service.getEventByDateAndRoom(date, room)}">
-                    <a th:href="@{edit/{id}(id = ${event.id})}">
-                        <div>
-                            <p th:text="${event.getStart()} + ' - ' + ${event.getStop()}"></p>
-                            <p th:text="${event.info}"></p>
-                        </div>
-                    </a>
+                    <button th:form="edit+${room.id}" class="btn btn-primary">Edit</button>
+                    <button th:form="delete+${room.id}" class="btn btn-danger">Delete</button>
                 </div>
             </td>
         </tr>
@@ -82,31 +67,12 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row g-3" th:method="POST" th:action="@{/}" id="save">
-                        <div class="col-md-3">
-                            <label for="room" class="form-label">Room</label>
-                            <select name="room" class="form-control" id="room">
-                                <option th:each="room : ${rooms}" th:value="${room.id}" th:text="${room.name}"></option>
-                            </select>
-                        </div>
-                        <div class="col-md-9">
-                            <label class="form-label" for="date">Date</label>
-                            <input class="form-control" type="date" name="date" id="date" th:field="${newEvent.date}">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="start" class="form-label">Start</label>
-                            <input class="form-control" type="time" name="start" id="start"
-                                   th:field="${newEvent.start}">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="end" class="form-label">End</label>
-                            <input class="form-control" type="time" name="end" id="end" th:field="${newEvent.stop}">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="info" class="form-label">Info</label>
-                            <input class="form-control" type="text" name="info" id="info" th:field="${newEvent.info}">
-                        </div>
+                    <form class="row g-3" th:method="POST" th:action="@{/manage}" id="save">
 
+                        <div class="col-md-12">
+                            <label for="name" class="form-label">Room name</label>
+                            <input class="form-control" type="text" name="name" id="name">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -118,7 +84,6 @@
     </div>
 
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
